[package]
name = "tsky-poster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daemon"

[dependencies]
atrium-api = "0.25.3"
bsky-sdk = "0.1.19"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
