[package]
name = "tsky-poster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daemon"

[[bin]]
name = "composer"

[dependencies]
atrium-api = "0.25.3"
bsky-sdk = "0.1.19"
dotenvy = "0.15.7"
futures = "0.3.31"
imagesize = "0.14.0"
lazy_static = "1.5.0"
mktemp = "0.5.1"
psl = "2.1.110"
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tl = "0.7.8"
tokio = { version = "1.45.0", features = ["full"] }
tree_magic_mini = "3.1.6"
wl-clipboard-rs = "0.9.2"

[profile.release]
debug = true
